<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_picture_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:background="@color/colorPrimary100"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <TextView
                    android:id="@+id/picture_title"
                    android:text="@string/add_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="@drawable/rounded_border_top_bottom"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:padding="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="300dp">

                <ImageView
                    android:layout_marginTop="6dp"
                    android:id="@+id/picture_preview"
                    android:contentDescription="@null"
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background"
                android:layout_marginTop="18dp" />

            <EditText
                android:hint="@string/title"
                android:theme="@style/AppTheme.ColorControlPrimary"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint"
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:inputType="textMultiLine"
                android:textColor="@color/edittext"
                android:textSize="@dimen/text_large_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background"
                android:layout_marginTop="12dp" />

            <EditText
                android:hint="@string/description"
                android:theme="@style/AppTheme.ColorControlPrimary"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint"
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:inputType="textMultiLine"
                android:textColor="@color/edittext"
                android:textSize="@dimen/text_large_size"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/background"
                android:layout_marginTop="12dp" />

            <EditText
                android:hint="@string/tags"
                android:theme="@style/AppTheme.ColorControlPrimary"
                android:id="@+id/tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint"
                android:layout_marginTop="12dp"
                android:background="@android:color/white"
                android:inputType="textMultiLine"
                android:textColor="@color/edittext"
                android:textSize="@dimen/text_large_size"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
