<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical">

    <LinearLayout
        android:background="@color/white100"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <RelativeLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/grey_light_100"
                android:id="@+id/date"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:layout_marginStart="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/expand"
                android:contentDescription="@null"
                android:src="@mipmap/ic_expand"
                android:adjustViewBounds="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="18dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/image_container"
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:contentDescription="@null"
                android:id="@+id/image"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <ProgressBar
                android:visibility="gone"
                android:theme="@style/AppTheme.ColorControlPrimary"
                android:id="@+id/download_progress"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_gravity="center"
                android:indeterminate="true" />

        </FrameLayout>

        <LinearLayout
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/owner_picture"
                android:src="@drawable/placeholder"
                android:layout_width="32dp"
                android:layout_height="32dp" />

            <TextView
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:textSize="16sp"
                android:id="@+id/owner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:textColor="@color/grey_light_100"
            android:layout_margin="12dp"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <org.apmem.tools.layouts.FlowLayout
            android:visibility="gone"
            android:id="@+id/tags_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"/>

        <View
            android:id="@+id/case_preview_social_separation_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:background="#d8d8d8" />

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/social"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center"
            android:weightSum="3"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/comment_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@null"
                    android:id="@+id/comment_icon"
                    android:layout_marginEnd="10dp"
                    android:src="@mipmap/ic_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comment"
                    android:textColor="#9a9a9a"
                    android:textSize="12sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@null"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/favorite_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_star_off" />

                <TextView
                    android:id="@+id/favorite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites"
                    android:textColor="#9a9a9a"
                    android:textSize="12sp"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/share_container"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:visibility="visible">

                <ImageView
                    android:contentDescription="@null"
                    android:src="@mipmap/ic_share"
                    android:id="@+id/share_icon"
                    android:layout_marginEnd="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:id="@+id/share_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="#9a9a9a"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:visibility="gone"
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="12dp" />

</LinearLayout>